re #283 fixing weird gap between table and breadcrumbs while the spinner is displaying

--- a/code/media/com_files/less/files.less
+++ b/code/media/com_files/less/files.less
@@ -1074,6 +1074,9 @@ div.current input, div.current textarea, div.current select {
     #files-grid > div {
                       padding: 10px;
                   }
+  .spinner {
+    padding: 0px!important;
+  }
 
     .files-node-shadow {
         float: left;
